CS 536/pr5/tests/errors/MinusNonNumber.minc
void main() {
string S = "STRING";
bool B = true;
int* P;

-S;
-B;
-P;
return;
}
